k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: deals-store

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: moaaz65/deals-store-frontend:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"

            limits:
              cpu: "250m"
              memory: "128Mi"
