k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: deals-store

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql
          image: moaaz65/deals-store-mysql:latest

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
