k8s/deals-store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: deals-store-ingress
  namespace: deals-store

spec:
  ingressClassName: nginx

  rules:
    - host: deals-store.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
